test_suite/tests/ui/malformed/str_suffix.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(bound = ""huh)]
pub struct Struct {
    #[serde(rename = ""what)]
    pub field: i32,
}

fn main() {}
